tests/ui/diagnostic_namespace/multiline_spans.stderr
error: there is no parameter `unknown` on trait `MultiLine`
  --> $DIR/multiline_spans.rs:6:17
   |
LL | ...                   multiline string \
   | ^^^^^^^
   |
   = help: expect either a generic argument name or `{Self}` as format argument
note: the lint level is defined here
  --> $DIR/multiline_spans.rs:2:9
   |
LL | #![deny(unknown_or_malformed_diagnostic_attributes)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: there is no parameter `unknown` on trait `MultiLine2`
  --> $DIR/multiline_spans.rs:12:17
   |
LL | ...                   multiline string {unknown}")]
   | ^^^^^^^
   |
   = help: expect either a generic argument name or `{Self}` as format argument

error: there is no parameter `unknown` on trait `MultiLine3`
  --> $DIR/multiline_spans.rs:17:17
   |
LL |     multiline string {unknown}")]
   |                 ^^^^^^^
   |
   = help: expect either a generic argument name or `{Self}` as format argument

error: there is no parameter `unknown` on trait `MultiLine4`
  --> $DIR/multiline_spans.rs:24:15
   |
LL | /                 \
LL | |                                 \
   | |___^
   |
   = help: expect either a generic argument name or `{Self}` as format argument

error: invalid format specifier
  --> $DIR/multiline_spans.rs:31:42
   |
LL |   #[diagnostic::on_unimplemented(message = "here is a big \
   |  __________________________________________^
LL | |                                          multiline string \
LL | |                                          {Self:+}")]
   | |__________________________________________________^
   |
   = help: no format specifier are supported in this position

error: invalid format specifier
  --> $DIR/multiline_spans.rs:41:42
   |
LL |   #[diagnostic::on_unimplemented(message = "here is a big \
   |  __________________________________________^
LL | |     multiline string {Self:#}")]
   | |______________________________^
   |
   = help: no format specifier are supported in this position

error: aborting due to 6 previous errors

